refactor payment transactions and improve payment tests